@@ -666,7 +666,7 @@ AC_CACHE_CHECK(if we may declare 'h_errno', ac_cv_decl_h_errno,
 #endif],
   [extern int h_errno;],
   ac_cv_decl_h_errno=yes, ac_cv_decl_h_errno=no)])
-case "$ac_cv_decl_errno" in
+case "$ac_cv_decl_h_errno" in
  yes) AC_DEFINE(DECL_H_ERRNO) ;;
 esac
 
