@@ -1,3 +1,10 @@
+1999-06-22  Harlan Stenn  <stenn@whimsy.udel.edu>
+
+	* configure.in: Fix typo with DECL_H_ERRNO test
+
+	* ntpd/ntp_loopfilter.c: Lose syscall decl, it's handled in
+	l_stdlib.h now.
+
 Mon May 31 18:49:49 1999  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* ntpd/ntp_proto.c (proto_config): Don't set sys_bclient on
